// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PossiblePasswords approximate 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardText>
    <h3>
      <ActionList />
       Entropy
    </h3>
    77.55
     bits (
    Strong
    )
    <LinearProgress
      color="#2196f3"
      max={128}
      min={0}
      mode="determinate"
      value={77.54887502163469}
    />
    <h3>
      <AvShuffle />
       Possible Passwords
    </h3>
    ~ 
    221,073,919,720,733,000,000,000
  </CardText>
</Card>
`;

exports[`PossiblePasswords exact 1`] = `
<Card
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardText>
    <h3>
      <ActionList />
       Entropy
    </h3>
    77.55
     bits (
    Strong
    )
    <LinearProgress
      color="#2196f3"
      max={128}
      min={0}
      mode="determinate"
      value={77.54887502163469}
    />
    <h3>
      <AvShuffle />
       Possible Passwords
    </h3>
    221,073,919,720,733,000,000,000
  </CardText>
</Card>
`;

exports[`mapStateToProps custom 1`] = `
Object {
  "approximate": false,
  "entropyBits": 0,
  "entropyTip": Object {
    "color": "#f44336",
    "minimum": 0,
    "strength": "Very Weak",
  },
  "possiblePasswords": 0,
}
`;

exports[`mapStateToProps custom with invalid possibleItems 1`] = `
Object {
  "approximate": false,
  "entropyBits": 0,
  "entropyTip": Object {
    "color": "#f44336",
    "minimum": 0,
    "strength": "Very Weak",
  },
  "possiblePasswords": 0,
}
`;

exports[`mapStateToProps custom with strong possiblePasswords 1`] = `
Object {
  "approximate": true,
  "entropyBits": 64,
  "entropyTip": Object {
    "color": "#2196f3",
    "minimum": 64,
    "strength": "Strong",
  },
  "possiblePasswords": 18446744073709552000,
}
`;

exports[`mapStateToProps custom with very strong possiblePasswords 1`] = `
Object {
  "approximate": true,
  "entropyBits": 128,
  "entropyTip": Object {
    "color": "#4caf50",
    "minimum": 128,
    "strength": "Very Strong",
  },
  "possiblePasswords": 3.402823669209385e+38,
}
`;

exports[`mapStateToProps custom with weak possiblePasswords 1`] = `
Object {
  "approximate": false,
  "entropyBits": 32,
  "entropyTip": Object {
    "color": "#ffeb3b",
    "minimum": 32,
    "strength": "Weak",
  },
  "possiblePasswords": 4294967296,
}
`;

exports[`mapStateToProps diceware 1`] = `
Object {
  "approximate": true,
  "entropyBits": 155.09775004326937,
  "entropyTip": Object {
    "color": "#4caf50",
    "minimum": 128,
    "strength": "Very Strong",
  },
  "possiblePasswords": 4.887367798068926e+46,
}
`;

exports[`mapStateToProps generic 1`] = `
Object {
  "approximate": true,
  "entropyBits": 73.55139620333959,
  "entropyTip": Object {
    "color": "#2196f3",
    "minimum": 64,
    "strength": "Strong",
  },
  "possiblePasswords": 1.3841287201e+22,
}
`;
